--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -330,117 +330,14 @@
 
       <!-- End of form -->
 
-      <!-- Roommates and Address boxes -->
+      <!-- Address boxes -->
 
       <div class="row">
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <div class="page-header">
-            <h2> Roommates </h2>
-            <a class="bubble edit-profile" ng-click="vm.toggleRoommatesAddon()">
-              <i class="fa fa-plus" ng-hide="vm.showRoommatesAddonButtons"></i>
-              <i class="fa fa-minus" ng-show="vm.showRoommatesAddonButtons"></i>
-            </a>
-          </div>
-          <div class="white-box roommates">
-
-            <div ng-show='vm.showRoommatesAddonButtons' class="text-center">
-              <a class="btn btn-primary btn-half-block" ng-click="vm.toggleAddRoommate()">
-                <i class="fa fa-plus"></i>
-                Add Roommate
-              </a>
-              <a class="btn btn-secondary btn-half-block" ng-click="vm.toggleInviteRoomate()">
-                <i class="fa fa-envelope"></i>
-                Invite Roommate
-              </a>
-              <hr>
-            </div>
-
-            <div ng-show="vm.showAddRoommate">
-              <a class="bubble cancel" ng-click="vm.cancelRoommateAddAddon()"><i class="fa fa-close"></i></a>
-              <h3>Search for your Roommate using by email. </h3>
-
-              <angucomplete-alt id="members"
-                                placeholder="Search for roommate"
-                                pause="400"
-                                selected-object="addNewRoommate"
-                                local-data="vm.users"
-                                search-fields="email"
-                                title-field="firstname,lastname"
-                                description-field="email"
-                                image-field="profileImage"
-                                input-class="form-control form-control-small"
-                                match-class="redFont"
-                                clear-selected="true">
-                <hr>
-            </div>
-
-            <div ng-show="vm.showInviteRoomate">
-              <a class="bubble cancel" ng-click="vm.cancelRoommateInviteAddon()"><i class="fa fa-close"></i></a>
-              <br/>
-              <div class="row">
-
-                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
-
-                  <div class="form-group input-post">
-                    <label for="email">E-mail:</label>
-                    <input id="email" name="email" type="email" ng-model="vm.invite.email" class="form-control"/>
-                  </div>
-
-                  <div class="form-group input-post">
-                    <label for="firstname">First name:</label>
-                    <input id="firstname" name="firstname" type="text" ng-model="vm.invite.firstname" class="form-control"/>
-                  </div>
-
-                  <div class="form-group input-post">
-                    <label for="lastname">Last name:</label>
-                    <input id="lastname" name="lastname" type="text" ng-model="vm.invite.lastname" class="form-control"/>
-                  </div>
-
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                  <a class="btn btn-primary pull-right" ng-href="mailto:{{vm.invite.email}}?Subject=Join%20Campusly%20community&body=Hey%20{{vm.invite.firstname}}%20{{vm.invite.lastname}},%0D%0A%0D%0AJoin%20me%20in%20the%20Campusly%20community!%20Sign-up%20for%20free%20at%20https://campusly.org/%0D%0A%0D%0A-{{vm.me.firstname}}" target="_top"><i class="fa fa-send fa-lg"></i>&nbspSend invitation</a>
-                </div>
-
-              </div>
-
-
-            </div>
-
-            <h2 class="no-roommate"  ng-show="!vm.showAddRoommate && vm.roommates.length === 0 && !vm.showInviteRoomate">
-              You don't have any roommate yet.
-              <small>
-                <a href="" ng-click="vm.toggleAddRoommate()">Click here</a> to find and add your roommates.
-              </small>
-            </h2>
-            <div class="row roommate" ng-repeat="roommate in vm.roommates">
-              <div class="col-xs-2">
-                <div class="picture">
-                  <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle looking-profile-img">
-                  <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-4x"></i>
-                </div>
-              </div>
-              <div class="col-xs-6 info">
-                <span class="name"> {{roommate.relatedRoommateId.firstname}} {{roommate.relatedRoommateId.lastname}} </span>
-                <span class="email">{{roommate.relatedRoommateId.email}}</span>
-                <span class="university" ng-if="roommate.relatedRoommateId.usereducationUsers[0].educationCenterName">{{roommate.relatedRoommateId.usereducationUsers[0].educationCenterName}}</span>
-                <span class="university" ng-if="!roommate.relatedRoommateId.usereducationUsers[0].educationCenterName">User didn't provide education data</span>
-                <span class="city" ng-if="roommate.relatedRoommateId.addresshistoryUsers.length">{{roommate.relatedRoommateId.addresshistoryUsers[0].zip}} {{roommate.relatedRoommateId.addresshistoryUsers[0].city}} / {{roommate.relatedRoommateId.addresshistoryUsers[0].state}}</span>
-                <span class="city" ng-if="!roommate.relatedRoommateId.addresshistoryUsers.length">User didn't provide address data</span>
-              </div>
-              <div class="actions col-xs-4">
-                <a class="bubble remove" ng-click="vm.removeRoommate(roommate)"><i class="fa fa-trash-o"></i></a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
         <!--  Address  -->
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="page-header">
-            <h2>Property Address</h2>
+            <h2 class="section-title">Property Address</h2>
           </div>
 
           <div class="white-box">
