Removed add roommate code from controller. Clicking Save on Edit Room removed ng-disabled pristine

--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -388,7 +388,7 @@
 
     <div class="row post-padding">
       <div class="col-xs-12 col-sm-12">
-        <button class="btn-rented-medium primary pull-right" ng-disabled="editRoomForm.$pristine " ng-click="vm.edit(editRoomForm, vm.education)">Save</button>
+        <button class="btn-rented-medium primary pull-right" ng-click="vm.edit(editRoomForm, vm.education)">Save</button>
         <button class="btn-rented-medium delete pull-left" ng-disabled="editRoomForm.$dirty" ng-click="vm.deleteRoom()">Delete</button>
       </div>
     </div>
