--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -28,8 +28,9 @@
         <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 sortBox" ng-show="!looking.showSearch">
           <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 col-sm-offset-2 col-md-offset-3 col-lg-offset-3">
             <select style="margin-top: -2px" id="sortBy" class="form-control" ng-model="looking.sortBy">
-              <option value="maxMonthlyRent">Maximum rent price</option>
-              <option value="moveInDate">Move in date</option>
+              <option value="createdAt">Posting date</option>
+              <option value="maxMonthlyRent">Max monthly rent</option>
+              <option value="moveInDate">Move-in date</option>
             </select>
           </div>
           <div class="col-xs-12 col-sm-5 col-md-4 col-lg-4">
