--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -33,8 +33,9 @@
           <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 col-sm-offset-2 col-md-offset-3 col-lg-offset-3">
             <select style="margin-top: -2px" id="sortBy" class="form-control" ng-model="rooms.sortBy">
               <option value="" disabled>Sort by</option>
+              <option value="createdAt">Posting date</option>
               <option value="monthlyPrice">Price</option>
-              <option value="availableMoveIn">Available date</option>
+              <option value="availableMoveIn">Move-in date</option>
               <option value="distanceToMyUniversity" ng-if="rooms.education.universityId">Dist. to Campus</option>
             </select>
           </div>
