Fix for adding room apartment number in DB

--- a/client/app/rooms/add.room/add.room.html
+++ b/client/app/rooms/add.room/add.room.html
@@ -382,7 +382,7 @@
                     <div class="form-group input-post">
 
                       <label for="apt">Apt No.</label>
-                      <input type="number" min="0" id="apt" name="apt" class="form-control"  placeholder="e.x. 2C" ng-model="vm.property.streetAddress.apt"/>
+                      <input type="text" id="apt" name="apt" class="form-control" placeholder="e.x. 2C" ng-model="vm.property.apt"/>
 
                     </div>
 
