--- a/client/app/dashboard/looking/looking-details/profile.section.html
+++ b/client/app/dashboard/looking/looking-details/profile.section.html
@@ -1,6 +1,3 @@
-<!--<span ng-click="detail.previous()" ng-hide="currentRoom==0" class="previousArrow"><i class="fa fa-arrow-left previousArrow">&nbsp;&nbsp;Previous</i></span>-->
-<!--<span ng-click="detail.next()" ng-hide="currentRoom==(detail.allIds.length-1)" class="nextArrow">Next&nbsp;&nbsp;<i class="fa fa-arrow-right nextArrow"></i></span>-->
-
 <div class="row" style="padding: 0;">
   <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 back-link" style="cursor: pointer;">
     <a ng-click="detail.previous()" ng-hide="currentRoom==0"><i class="fa fa-arrow-left"></i>&nbsp;&nbsp;Previous</a>
@@ -12,7 +9,12 @@
 </div>
 
 
-<h2 style="clear:both;">{{detail.lookingDetail.relatedUserId.firstname}}'s profile</h2>
+<h2 style="clear:both;">{{detail.lookingDetail.relatedUserId.firstname}}'s profile
+  <small class="pull-right" ng-if="detail.me.id == detail.lookingDetail.userId">
+    <a class="new-bubble pull-right" style="height: 1.8em; width: 1.8em; padding-top: 6px" ui-sref="editLooking({id:detail.lookingDetail.id})" ui-sref-opts="{reload:true}">
+      <i class="fa fa-pencil"></i></a>
+  </small>
+</h2>
 
 <!-- Info about the user -->
 
