Room typo fix. slice index at 0 fix

--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -318,7 +318,7 @@
 
           <div class="row post-padding">
             <div class="col-xs-11 col-sm-11 input-post">
-              <textarea name="roomDescription" id="roomDescription" cols="60" rows="3" ng-model="vm.room.description"  class="form-control" placeholder="Enter room description (optional)" ></textarea>
+              <textarea name="roomDescription" id="roomDescription" cols="60" rows="3" ng-model="vm.room.description"  class="form-control" placeholder="Enter more description (optional)" ></textarea>
               <p class="col-xs-offset-1 col-sm-offset-1"><br><sup class="asterisk">*</sup>required fields - makes searching your room faster</p>
             </div>
           </div>
