--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -90,7 +90,7 @@
             <div class="text-center">
               <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddRoommate()" ng-disabled="myProfile.confirmed>10">
                 <i class="fa fa-plus"></i>
-                Find and Add
+                Find
               </a>
               <a class="btn btn-secondary btn-half-block" ng-click="myProfile.toggleInviteRoomate()">
                 <i class="fa fa-envelope"></i>
