Added angular-match-media module. Reduced listings showing on dashboard for mobile devices

--- a/client/index.html
+++ b/client/index.html
@@ -96,6 +96,7 @@
       <script src="bower_components/angular-moment/angular-moment.js"></script>
       <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
       <script src="bower_components/ng-optimizely/ng-optimizely.js"></script>
+      <script src="bower_components/angular-media-queries/match-media.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
