Adding back people properties for tracking around you

--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -123,10 +123,12 @@
                       <a id="facebookPM" ng-href="{{arYou.facebook}}" ng-class="{'interested': arYou.facebook, 'not-interested':!arYou.facebook}" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
                       <script type="text/javascript" ng-if="arYou.facebook">
                         mixpanel.track_links("#facebookPM", "Facebook PM sent - around you");
+                        mixpanel.people.increment("#facebookPM", "Facebook PM sent - around you");
                       </script>
                       <a id="email" ng-href="mailto:{{arYou.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
                       <script type="text/javascript">
                         mixpanel.track_links("#email", "Email sent - around you");
+                        mixpanel.people.increment("#email", "Email sent - around you");
                       </script>
                     </div>
                   </div>
