--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -49,10 +49,12 @@
             <a id="facebookPM" ng-href="{{around.facebook}}" ng-class="{'interested': around.facebook, 'not-interested':!around.facebook}" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
             <script type="text/javascript">
               mixpanel.track_links("#facebookPM", "Facebook PM sent - around you");
+              mixpanel.people.increment("#facebookPM", "Facebook PM sent - around you");
             </script>
             <a id="email" ng-href="mailto:{{around.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
             <script type="text/javascript">
               mixpanel.track_links("#email", "Email sent - around you");
+              mixpanel.people.increment("#email", "Email sent - around you");
             </script>
           </div>
         </div>
