--- a/client/index.html
+++ b/client/index.html
@@ -111,6 +111,7 @@
     <script src="components/blocks/logger/logger.module.js"></script>
     <script src="components/blocks/exception/exception.module.js"></script>
     <script src="app/rooms/rooms.module.js"></script>
+    <script src="app/messages/messages.module.js"></script>
     <script src="app/rooms/add.room/add.room.module.js"></script>
     <script src="app/rooms/edit.room/edit.room.module.js"></script>
     <script src="app/roomDetail/roomDetail.module.js"></script>
@@ -141,6 +142,7 @@
           <script src="app/dashboard/my-profile/my.profile.controller.js"></script>
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
+          <script src="app/messages/messages.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
           <script src="app/roomDetail/roomDetail.controller.js"></script>
           <script src="app/rooms/add.room/add.room.controller.js"></script>
@@ -207,6 +209,6 @@
       </div>
     </div>
   </div>
-  
+
 </body>
 </html>
