Updated structure for Pubnub

--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -7,7 +7,7 @@
 
       <section class="text-box-landing">
 
-        <h1>The easiest way for you to live and connect off-campus</h1>
+        <h1>Your campus community</h1>
 
       </section>
 
