--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
       {mixpanel.init("bd202854d110bac5e72d7e034abdae01", {'loaded':function() {window.Gdistinct_id = mixpanel.get_distinct_id();}})} else {
     mixpanel.init("41a02b2df2e263307327276d0ed559ec", {'loaded':function() {window.Gdistinct_id = mixpanel.get_distinct_id();}})}</script><!-- end Mixpanel -->
     <script src="//cdn.optimizely.com/js/2780703231.js"></script> <!-- Optimizely code snippet -->
+    <script src="http://cdn.pubnub.com/pubnub.min.js"></script> <!-- Core PubNub JS Library from CDN -->
+    <script src="https://cdn.pubnub.com/pubnub-crypto.min.js"></script> <!-- Encryption PubNub JS Library from CDN -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
@@ -97,6 +99,7 @@
       <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
       <script src="bower_components/ng-optimizely/ng-optimizely.js"></script>
       <script src="bower_components/angular-media-queries/match-media.js"></script>
+      <script src="bower_components/pubnub-angular/lib/pubnub-angular.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
