--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -27,7 +27,7 @@
         <h2>Messages</h2>
 
         <div class="white-chat-box">
-
+          <p>{{messages.education.universityId}}</p>
         </div>
 
       </div>
