--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -8,17 +8,17 @@
 
       <h4>Channel Subscriptions</h4>
 
-      <button ng-click="messages.subscribe('channel1')" style="height:20px; width:50px" ng-model="messages.subscriptions.channel1" /> Channel 1
+      <button ng-click="messages.setCurrentChannel('#UC San Diego')" style="height:20px; width:50px" ng-model="messages.subscriptions.channel1" /> #UC San Diego
       </button>
-      <button ng-click="messages.updateSubscription('channel2')" style="height:20px; width:50px" ng-model="messages.subscriptions.channel2" /> Channel 2
+      <button ng-click="messages.setCurrentChannel('#UC San Diego Financial Aid')" style="height:20px; width:50px" ng-model="messages.subscriptions.channel2" /> Channel 2
       </button>
 
       <h4>Message History</h4>
 
       <form>
         <input type="text" ng-model='messages.newMessage' />
-        <button ng-click="messages.publish('channel1')">Send to Channel 1</button>
-        <button ng-click="messages.publish('channel2')">Send to Channel 2</button>
+        <button ng-click="messages.grabHistory('#UC San Diego', 3)">Send to Channel 1</button>
+        <button ng-click="messages.grabHistory('#UC San Diego Financial Aid', 3)">Send to Channel 2</button>
       </form>
 
       <br />
