fixed new private message

--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -24,7 +24,7 @@
         </form>
 
 
-          <button ng-click="messages.newPrivateConversation('Aaron', 'aayang@ucsd.edu')">New private message with aayang@ucsd.edu</button>
+          <button ng-click="messages.newPrivateConversation('Aaron', '5@ucsd.edu')">New private message with aayang@ucsd.edu</button>
           <button ng-click="messages.grabInboxHistory()">Older Private Messages</button>
           <button ng-click="messages.privateCurrentSubscribe(messages.privateMessages[0].email)">Message 1st pm</button>
           <button ng-click="messages.privateCurrentSubscribe(messages.privateMessages[1].email)">Message 2nd pm</button>
